--- a/_posts/thesis_chapters/2025-1-6-Gdps.md
+++ b/_posts/thesis_chapters/2025-1-6-Gdps.md
@@ -674,14 +674,14 @@ This section has explored the use of GDPs within strategies and processes that o
 
 This section begins an interpretation of the diverse roles of GDPs the game making activity using CHAT concepts, this analysis is continued in the following chapter. Addressing GDPs as a mediational tool. Chapter 5 outlined design decisions and this chapter explored the impact. For example, the uses of the quick start activities, tutorials and code snippets as supporting tools, if viewed in isolation can been as more straight forward, triangular form of subject, tool, object mediation (see Chapter 4 diagram). This chapter and the evolution of the learning design exposed tensions where existing meditational strategies or tools were insufficient and thus innovative form of mediation were needed. Elements of the innovation in the toolset of learning design from P1 to P2 based on emerging needs of the participants exemplify this (is an example needed). In line with Sannino[], this study frames such innovation within CHAT as transformational agency (see Chapter 7).  
 
-
-
-
-
 By way of contrast, Gutiérrez's [@gutierrez_developing_2008] focus on on movement of identity between settings repertoires of practice draws on the importance of wider cultural focus of the learning process, or the “cultural mediation of thinking” (Moll, 1998) cited in [@digiacomo_seven_2017] p.44. Gutiérrez's sees a role of facilitators to facilitate this via learning design.
 
 
-In this chapter the last section examining activity on cultural plane exposed, elements of transfer between different activity systems, supporting Gutiérrez's [@gutierrez_developing_2008] perspective  regarding the importance of transcending borders and linguistic practices between sites of learning. In these examples, the process of playtesting often served as a facilitative medium for a shared idioculture to emerge and, as such, became a significant part of the pedagogy of the learning design. While the design processes directly linked to implementing GDPs were among the most significant in the video data, others were present.
+In this chapter the last section examining activity on cultural plane exposed, elements of transfer between different activity systems, supporting Gutiérrez's [@gutierrez_developing_2008] perspective  regarding the importance of transcending borders and linguistic practices between sites of learning. In these examples, the process of playtesting often served as a facilitative medium for a shared idioculture to emerge and, as such, became a significant part of the pedagogy of the learning design.
+DRAW ON A COLE idioculture SOURCE.
+
+
+ While the design processes directly linked to implementing GDPs were among the most significant in the video data, others were present.
 
 In the following section I briefly explore some facilitator introduced community interactions as a way to prepare for a discussion in relation to the development of agency in the following chapter
 
@@ -758,11 +758,23 @@ Thus I am not suggesting that these styles make up a ridgid typology to be repli
 
 <!-- NOTE To restructure. -->
 
+Narrative, something interesting started to develop a flexible, flow based practice....
+Coming back to my motivations as a facilitator and links in the literature of CoL and Papert's Samba school.
+
+Intro; here I will cover observations of the characteristics of these emerging design practices, twinned design affordances  and links them with existing  conceptualisation within the literature. Including:
+
+  - flexibility in design stage, jumping arbout in design cycles, rapidly responding to Feedback
+  - via division of labour, and making styles via incorporation of funds of knowledge, home interests
+  - via choice of patterns in the MENU
+  - But restrictions on the genre and the template  
+
 
 In the previous chapter I outlined this learning design as aligned more with a step-based approach than a design-build-test one.  As mentioned in Chapter 3, the process of examining video data also did not align with common design thinking stages as I initially thought might be the case. The stages were instead fragmented and sometimes happened in parallel. In many interactions I observed improvisational approaches which incorporated ideation, planning, implementation and testing in space of a minute or so. If I had encouraged participants to follow prescribed design stages this may have restrict this flexibility in practice. This concern is echoed in research which critiques a similar, staged approach to creative writing in primary education using a writing cycle approach.  [@kuby_rhizomatic_2016]
 
 
-This section therefore describes a set of evolving and flexible design practices as a counterpoint to  design thinking stages. These practices includes emerging norms, DoL, and community behaviour.
+This section therefore describes a set of evolving and flexible design practices, partly as a counterpoint to design thinking stages.
+
+These practices includes emerging norms, DoL, and community behaviour.
 
 
 <!-- MOVE TO CHAP 3?
@@ -782,16 +794,17 @@ Addressing a separate aspect of reflection, in P2, I guided supporting student f
 The examples of this chapter show the importance of GDPS as a lingua franca, as a mediational strategy to facilitate these kinds of flexible responsive collaboration.
 
 
-
+**how to conceptualise**
 These observations of the value of flexible design processes, invite discussion on how best to conceptualise and support these flexible approaches. One potentially fruitful perspective is that ofrhizomatic design approaches [@de_freitas_classroom_2012]. Research exists on the promise of rhizomatic approaches design thinking in creative educational programmes [@biffi_chasing_2017-1]. However researchers identify significant competencies required including to "identify and synthesize the body of technical and even complex knowledge into a feasible structure" [@biffi_chasing_2017-1, p. 972], which are not well-aligned with the age group of this context.
 
 So instead of rhizomatic design, I propose that the tools, process and the community in this study mutually encourage an improvisational approach often referred to as _jamming_. While the processes identified are often improvised, there is a group element of the process where makers pick up techniques from other makers in the group. I suggest that such _jamming_ can be facilitated as a way of encouraging co-development of practices and making styles as proposed by Gutiérrez and Rogoff [@gutierrez_cultural_2003]
 
 Restrictions in creativity are important here. The restricted genre, pixel art format and templated approach act not only as technical  scaffolds but also aligns with research on the value of constraints in facilitating rapid creative improvisation in the areas of music and drama. The domains of programming, game jams and hackathons also use constraints in a similar way [@gabler2005prototype].
 
-Game Jams are accelerated events encouraging creative collaboration and innovation. While the event's premise is to promote collaboration, these events are inconsistent in their support and scaffolding of collaborative approaches [@goddard_playful_2014]. Game jams often prize innovation and originality. Recent research posits that Game Jams can be profitably used in formal education contexts [@aurava_game_2021], although there is scant guidance on how to address potentially problematic issues (list these). A complementary approach would be to significantly adapt the overall Game Jam format and to add greater scaffolding to the process as in the learning design of this research. Jamming in a musical context on the other hand takes place within an introduced but ideally familiar frame work. In musical terms this may be improvising around a familiar popular song, here it is adapting a template of a familiar game genre.
+Game Jams are accelerated events encouraging creative collaboration and innovation. While the event's premise is to promote collaboration, these events are inconsistent in their support and scaffolding of collaborative approaches [@goddard_playful_2014]. Game jams often prize innovation and originality. Recent research posits that Game Jams can be profitably used in formal education contexts [@aurava_game_2021], although there is scant guidance on how to address potentially problematic issues (list these).
 
-WRAP UP SOMEHOW ?
+A complementary approach would be to significantly adapt the overall Game Jam format and to add greater scaffolding to the process as in the learning design of this research. Jamming in a musical context on the other hand takes place within an introduced but ideally familiar frame work. In musical terms this may be improvising around a familiar popular song, here it is adapting a template of a familiar game genre.
+
 
 <!-- There are disparate resources available for game jams but due to the adult centric audience and mix of abilities they are less guided in nature than many supported design processes aimed at school age audiences. -->
 
